--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 
 [workspace]
-members = ["src-tauri"]
+members = [ "shared","src-tauri"]
