--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@floating-ui/dom": "^1.6.3",
     "@linwooddev/style": "^0.2.5",
     "sass": "^1.71.1"
   }
