Add details view

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
+shared = { path = "./shared" }
 
 [workspace]
 members = [ "shared","src-tauri"]
+resolver = "2"
