--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "cargo tauri dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "packageManager": "pnpm@8.15.4",
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
-    "@linwooddev/style": "^0.3.1",
+    "@linwooddev/style": "^0.3.2",
     "sass": "^1.71.1"
   }
 }
