--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ leptos_router = { version = "0.6", features = ["csr"] }
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
+strum = { version = "0.26", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 shared = { path = "./shared" }
