--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
     "@linwooddev/style": "^0.3.6",
+    "@phosphor-icons/web": "^2.0.3",
     "sass": "^1.72.0"
   }
 }
