--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+indexmap = { version = "2.2", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
+thiserror = "1.0"
