--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "vulpine",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "cargo tauri dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "packageManager": "pnpm@8.15.6",
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
